<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:columnCount="4">

    <TextView
        android:id="@+id/text_output_operation"
        style="@style/output_style"
        android:textSize="@dimen/text_size_operation"
        tools:text="12345678" />

    <TextView
        android:id="@+id/text_output"
        style="@style/output_style"
        android:textSize="@dimen/text_size_number"
        tools:text="12345678" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_c"
        style="@style/button_style"
        android:text="@string/cancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign"
        style="@style/button_style"
        android:text="@string/sign" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_percent"
        style="@style/button_style"
        android:text="@string/percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divide"
        style="@style/button_style.operand"
        android:text="@string/divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        style="@style/button_style.number"
        android:text="@string/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        style="@style/button_style.number"
        android:text="@string/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        style="@style/button_style.number"
        android:text="@string/button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        style="@style/button_style.operand"
        android:text="@string/multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        style="@style/button_style.number"
        android:text="@string/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        style="@style/button_style.number"
        android:text="@string/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        style="@style/button_style.number"
        android:text="@string/button_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_subtract"
        style="@style/button_style.operand"
        android:text="@string/subtract" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        style="@style/button_style.number"
        android:text="@string/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        style="@style/button_style.number"
        android:text="@string/button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        style="@style/button_style.number"
        android:text="@string/button_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        style="@style/button_style.operand"
        android:text="@string/add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        style="@style/button_style.number"
        android:layout_columnSpan="2"
        android:width="@dimen/button_wide_width_grid"
        android:text="@string/button_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        style="@style/button_style.number"
        android:text="@string/point" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equal"
        style="@style/button_style.operand"
        android:text="@string/equal" />

</GridLayout>