<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/teal_200">

    <TextView
        android:id="@+id/text_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        tools:text="12345678"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_c"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_sign"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/sign" />

        <Button
            android:id="@+id/button_percent"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/percent" />

        <Button
            android:id="@+id/button_divide"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/divide" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_7"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/button_7" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/button_8" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/button_9" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/multiply" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_4"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/button_4" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/button_5" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/button_6" />

        <Button
            android:id="@+id/button_subtract"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/subtract" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/button_2" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/button_3" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_0"
            android:layout_width="@dimen/button_wide_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/button_0" />

        <Button
            android:id="@+id/button_point"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/point" />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:layout_marginVertical="@dimen/buttons_margin_vertical"
            android:text="@string/equal" />

    </LinearLayout>

</LinearLayout>