<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_500">

    <Button
        android:id="@+id/button_c"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/button_sign"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_output" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:text="@string/percent"
        app:layout_constraintEnd_toStartOf="@+id/button_divide"
        app:layout_constraintStart_toEndOf="@+id/button_sign"
        app:layout_constraintTop_toBottomOf="@+id/text_output" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:text="@string/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_percent"
        app:layout_constraintTop_toBottomOf="@+id/text_output" />

    <Button
        android:id="@+id/button_sign"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:text="@string/sign"
        app:layout_constraintEnd_toStartOf="@+id/button_percent"
        app:layout_constraintStart_toEndOf="@+id/button_c"
        app:layout_constraintTop_toBottomOf="@+id/text_output" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:text="@string/button_7"
        app:layout_constraintStart_toStartOf="@+id/button_c"
        app:layout_constraintTop_toBottomOf="@+id/button_c" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:text="@string/button_9"
        app:layout_constraintStart_toStartOf="@+id/button_percent"
        app:layout_constraintTop_toBottomOf="@+id/button_percent" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:text="@string/multiply"
        app:layout_constraintStart_toStartOf="@+id/button_divide"
        app:layout_constraintTop_toBottomOf="@+id/button_divide" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:layout_marginTop="2dp"
        android:text="@string/button_8"
        app:layout_constraintStart_toStartOf="@+id/button_sign"
        app:layout_constraintTop_toBottomOf="@+id/button_sign" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:layout_marginTop="2dp"
        android:text="@string/button_4"
        app:layout_constraintStart_toStartOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:layout_marginTop="2dp"
        android:text="@string/button_6"
        app:layout_constraintStart_toStartOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:layout_marginTop="2dp"
        android:text="@string/subtract"
        app:layout_constraintStart_toStartOf="@+id/button_multiply"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:layout_marginTop="2dp"
        android:text="@string/button_5"
        app:layout_constraintStart_toStartOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:text="@string/button_1"
        app:layout_constraintStart_toStartOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:text="@string/button_3"
        app:layout_constraintStart_toStartOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="@+id/button_subtract"
        app:layout_constraintTop_toBottomOf="@+id/button_subtract" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:layout_marginTop="2dp"
        android:text="@string/button_2"
        app:layout_constraintStart_toStartOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="@dimen/button_wide_width"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:text="@string/button_0"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:layout_marginTop="2dp"
        android:text="@string/equal"
        app:layout_constraintStart_toStartOf="@+id/button_add"
        app:layout_constraintTop_toBottomOf="@+id/button_add" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/buttons_margin_vertical"
        android:text="@string/point"
        app:layout_constraintStart_toStartOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <TextView
        android:id="@+id/text_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:singleLine="true"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/button_c"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="12345678" />

</androidx.constraintlayout.widget.ConstraintLayout>